--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "discbotapi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "joi": "^17.7.0",
+    "monk": "^7.3.4",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
 }
